
PIG-2908: Fix unit tests to work with jdk7 (rohini via dvryaboy) 

PIG-2852: Update documentation regarding parallel local mode execution (cheolsoo via jcoveney)

PIG-2712: Pig does not call OutputCommitter.abortJob() on the underlying OutputFormat (rohini via gates)

PIG-2727: PigStorage Source tagging does not need pig.splitCombination to be turned off (prkommireddi via dvryaboy)

BUG FIXES

PIG-2960: Increase the timeout for unit test (daijy)

PIG-2958: Pig tests do not appear to have a logger attached (daijy)

PIG-2942: DevTests, TestLoad has a false failure on Windows (jgordon via daijy)

PIG-2943: DevTests, Refactor Windows checks to use new Util.WINDOWS method for code health (jgordon via dvryaboy)

PIG-2801: grunt "sh" command should invoke the shell implicitly instead of calling exec directly with the command tokens
(jgordon via daijy)

PIG-2800: pig.additional.jars path separator should align with File.pathSeparator instead of being hard-coded to ":"
(jgordon via azaroth)

PIG-2798: pig streaming tests assume interpreters are auto-resolved (jgordon via daijy)

PIG-2797: Tests should not create their own file URIs through string concatenation, should use Util.generateURI
instead (jgordon via daijy)

PIG-2796: Local temporary paths are not always valid HDFS path names (jgordon via daijy)

PIG-2795: Fix test cases that generate pig scripts with "load " + pathStr to encode "\" in the path (jgordon via daijy)

PIG-2940: HBaseStorage store fails in secure cluster (cheolsoo via daijy)

PIG-2821: HBaseStorage should work with secure hbase (rohini via daijy)

PIG-2890: Revert PIG-2578 (dvryaboy)

PIG-2859: Fix few e2e test failures (rohini via daijy)

PIG-2729: Macro expansion does not use pig.import.search.path - UnitTest borked (johannesch via daijy)

PIG-2791: Pig does not work with Namenode Federation (rohini via daijy)

PIG-2783: Fix Iterator_1 e2e test for Hadoop 23 (rohini via daijy)
