@@ -36,6 +36,8 @@ PIG-2727: PigStorage Source tagging does not need pig.splitCombination to be tur
 
 BUG FIXES
 
+PIG-2953: "which" utility does not exist on Windows (daijy)
+
 PIG-2960: Increase the timeout for unit test (daijy)
 
 PIG-2958: Pig tests do not appear to have a logger attached (daijy)
